--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
     "compilerOptions": {
         "module": "amd",
         "outDir": "dist/",
-        "out": "dist/scripts/main.js",
         "rootDir": "src"
     },
     "files": [
-        "src/scripts/main.ts"
+        "src/scripts/main.ts",
+	"src/scripts/settings.ts"
     ]
 }
