--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "amd",
+	"target": "es5",
         "outDir": "dist/",
         "rootDir": "src"
     },
